--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -31,7 +31,7 @@ RUN apt-get update && DEBIAN_FRONTEND=noninteractive apt-get install -y --no-ins
     tmux \
     unzip \
     vim \
-    vulkan-utils \
+    vulkan-tools \
     wget \
     xvfb \
     # Libraries for SAPIEN rendering
